<resources>
    <string name="app_name">Neighbours</string>
    <string name="neighbours">Neighbours</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="search_pincode">Search pincode</string>
</resources>